--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>QuantumThermo</title>
+  <style>
+    .a {
+      font-family: PingFang SC,HarmonyOS_Regular,Helvetica Neue,Microsoft YaHei,sans-serif;
+      -webkit-font-smoothing: auto;
+    }
+    
+    .blue {
+      color: blue;
+    }
+    .red {
+      color: red;
+    }
+  </style>
 </head>
 <body>
   <h3>QuantumThermo Web Page</h3>
+  <div class="a">0123456789</div>
+  <p class="red blue">color</p>
 </body>
 </html>
