--- a/index.html
+++ b/index.html
@@ -1,27 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./index.css">
   <title>QuantumThermo</title>
-  <style>
-    .a {
-      font-family: PingFang SC,HarmonyOS_Regular,Helvetica Neue,Microsoft YaHei,sans-serif;
-      -webkit-font-smoothing: auto;
-    }
-    
-    .blue {
-      color: blue;
-    }
-    .red {
-      color: red;
-    }
-  </style>
 </head>
+
 <body>
-  <h3>QuantumThermo Web Page</h3>
-  <div class="a">1234567890</div>
-  <p class="red blue">color</p>
+  <header>
+    <h1 id="title">Gentaro Watanabe group</h1>
+    <nav>
+      <ul class="nav">
+        <li><a href="#home">HOME</a></li>
+        <li><a href="#research">RESEARCH</a></li>
+        <li><a href="#member">MEMBER</a></li>
+        <li><a href="#publications">PUBLICATIONS</a></li>
+        <li><a href="#open-positions">OPEN</a></li>
+        <li><a href="#links">LINKS</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section id="home" class="section">
+      <div class="swiper-wrapper"></div>
+    </section>
+    <section id="research" class="section">
+      <h2>research</h2>
+    </section>
+    <section id="member" class="section">
+      <h2>member</h2>
+    </section>
+    <section id="publications" class="section">
+      <h2>publications</h2>
+    </section>
+    <section id="open-positions" class="section">
+      <h2>open-positions</h2>
+    </section>
+  </main>
+  <footer>
+    <section id="links" class="section">
+      <h2>links</h2>
+    </section>
+  </footer>
+  <script src="./utils/swiper.js"></script>
+  <script src="./index.js"></script>
 </body>
+
 </html>
