--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <h1 id="title">Gentaro Watanabe group</h1>
     <nav>
       <ul class="nav">
-        <li><a href="#home">HOME</a></li>
-        <li><a href="#research">RESEARCH</a></li>
-        <li><a href="#member">MEMBER</a></li>
-        <li><a href="#publications">PUBLICATIONS</a></li>
-        <li><a href="#open-positions">OPEN</a></li>
-        <li><a href="#links">LINKS</a></li>
+        <li><a href="#home" class="nav-item">HOME</a></li>
+        <li><a href="#research" class="nav-item">RESEARCH</a></li>
+        <li><a href="#member" class="nav-item">MEMBER</a></li>
+        <li><a href="#publications" class="nav-item">PUBLICATIONS</a></li>
+        <li><a href="#open-positions" class="nav-item">OPEN</a></li>
+        <li><a href="#links" class="nav-item">LINKS</a></li>
       </ul>
     </nav>
   </header>
