--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <h1 id="title">Gentaro Watanabe group</h1>
+    <h1 id="title">Gentaro Watanabe Group</h1>
     <nav>
       <ul class="nav">
         <li><a href="#home" class="nav-item">HOME</a></li>
